# Nonlinear_ADAA

./: .gitignore  :w  Cargo.toml  README.md  Untitled.ipynb  Untitled1.ipynb  breath.scd  bundler.toml  p.txt  todo.txt
.github/workflows/: rust.yml
nih_plug_vizia/: Cargo.toml
src/: adaa.rs  circular_buffer.rs  editor.rs  iir_biquad_filter.rs  knob.rs  lib.rs  main.rs  oversample.rs
src/oversample/: os_filter_constants.rs  oversample_stage.rs
tests/: integration_tests.rs  os_stage_tests.rs
tests/json_test_data/: hc_2x_ad1.json  hc_2x_ad2.json  hc_4x_ad1.json  hc_4x_ad2.json  tanh_2x_ad1.json  tanh_2x_ad2.json  tanh_4x_ad1.json  tanh_4x_ad2.json
