[package]
name = "Nonlinear_ADAA"
version = "0.1.0"
edition = "2021"
authors = ["James Squires <squires.jr@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Nonlinear processor"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
circular_buffer = { git = "https://github.com/jsquie/circular_buffer.git" }
oversampler = { git = "https://github.com/jsquie/oversampler.git" }
iir_biquad_filter = { git = "https://github.com/jsquie/iir_biquad_filter.git" }
adaa_nl = { path = "../adaa_nl/" }
# ndarray = "0.15.6"
# ndarray-rand = "0.14.0"
num-traits = "0.2.14"
# blas-src = { version = "0.8", features = ["accelerate"] }
nih_plug_vizia = { path = "nih_plug_vizia" }
serde = "1.0.200"
serde_json = "1.0"
itertools = "0.12.1"

# atomic_float = "0.1"
# openblas-src = { version = "0.10", features = ["cblas", "system"]}

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 4 

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
