
[package]
name = "Nonlinear_ADAA"
version = "0.1.0"
edition = "2021"
authors = ["James Squires <squires.jr@gmail.com>"]
license = "GPL-3.0-or-later"
# homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Nonlinear processor"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone", "simd"] }
jdsp = { path = "../jdsp/jdsp", features = ["all"]}
num-traits = "0.2.14"
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" } 
serde = "1.0.200"
serde_json = "1.0"
itertools = "0.12.1"
vizia = "0.1.0"

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 8

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
